// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > snapshots > matches snapshot - default variant 1`] = `
"<!--
    ┌─────────────────────────────────────────────────────────────┐
    │                          CARD                               │
    │  ┌───────────────────────────────────────────────────────┐  │
    │  │  ┌─────────────────────────────────────────────────┐  │  │
    │  │  │  [icon] (optionnel via prop)                    │  │  │
    │  │  │  [title] (optionnel via prop)                   │  │  │
    │  │  │  [description] (optionnel via prop)             │  │  │
    │  │  │  ─────────────────────────────────────────────  │  │  │
    │  │  │  [slot: default] ← contenu custom (optionnel)   │  │  │
    │  │  └─────────────────────────────────────────────────┘  │  │
    │  └───────────────────────────────────────────────────────┘  │
    │                                                             │
    │  Props:                                                     │
    │    • variant: default | bordered | elevated                 │
    │    • icon: string (emoji ou texte, optionnel)               │
    │    • title: string (titre de la card, optionnel)            │
    │    • description: string (description, optionnel)           │
    │                                                             │
    │  Slots:                                                     │
    │    • default: Contenu custom (si pas de props)              │
    │                                                             │
    │  Events: Aucun (composant de présentation pure)             │
    └─────────────────────────────────────────────────────────────┘
  -->
<div data-v-37601c9c="" class="card card--default">
  <!-- Icon -->
  <!--v-if-->
  <!-- Title -->
  <!--v-if-->
  <!-- Description -->
  <!--v-if-->
  <!-- Slot pour contenu custom -->
  <div data-v-37601c9c="" class="card__body">Default card content</div>
</div>"
`;

exports[`Card > snapshots > matches snapshot - elevated with all props 1`] = `
"<!--
    ┌─────────────────────────────────────────────────────────────┐
    │                          CARD                               │
    │  ┌───────────────────────────────────────────────────────┐  │
    │  │  ┌─────────────────────────────────────────────────┐  │  │
    │  │  │  [icon] (optionnel via prop)                    │  │  │
    │  │  │  [title] (optionnel via prop)                   │  │  │
    │  │  │  [description] (optionnel via prop)             │  │  │
    │  │  │  ─────────────────────────────────────────────  │  │  │
    │  │  │  [slot: default] ← contenu custom (optionnel)   │  │  │
    │  │  └─────────────────────────────────────────────────┘  │  │
    │  └───────────────────────────────────────────────────────┘  │
    │                                                             │
    │  Props:                                                     │
    │    • variant: default | bordered | elevated                 │
    │    • icon: string (emoji ou texte, optionnel)               │
    │    • title: string (titre de la card, optionnel)            │
    │    • description: string (description, optionnel)           │
    │                                                             │
    │  Slots:                                                     │
    │    • default: Contenu custom (si pas de props)              │
    │                                                             │
    │  Events: Aucun (composant de présentation pure)             │
    └─────────────────────────────────────────────────────────────┘
  -->
<div data-v-37601c9c="" class="card card--elevated">
  <!-- Icon -->
  <div data-v-37601c9c="" class="card__icon">⚡</div><!-- Title -->
  <h3 data-v-37601c9c="" class="card__title">Card Title</h3><!-- Description -->
  <p data-v-37601c9c="" class="card__description">Card description text</p><!-- Slot pour contenu custom -->
  <!--v-if-->
</div>"
`;

exports[`Card > snapshots > matches snapshot - with props and slot 1`] = `
"<!--
    ┌─────────────────────────────────────────────────────────────┐
    │                          CARD                               │
    │  ┌───────────────────────────────────────────────────────┐  │
    │  │  ┌─────────────────────────────────────────────────┐  │  │
    │  │  │  [icon] (optionnel via prop)                    │  │  │
    │  │  │  [title] (optionnel via prop)                   │  │  │
    │  │  │  [description] (optionnel via prop)             │  │  │
    │  │  │  ─────────────────────────────────────────────  │  │  │
    │  │  │  [slot: default] ← contenu custom (optionnel)   │  │  │
    │  │  └─────────────────────────────────────────────────┘  │  │
    │  └───────────────────────────────────────────────────────┘  │
    │                                                             │
    │  Props:                                                     │
    │    • variant: default | bordered | elevated                 │
    │    • icon: string (emoji ou texte, optionnel)               │
    │    • title: string (titre de la card, optionnel)            │
    │    • description: string (description, optionnel)           │
    │                                                             │
    │  Slots:                                                     │
    │    • default: Contenu custom (si pas de props)              │
    │                                                             │
    │  Events: Aucun (composant de présentation pure)             │
    └─────────────────────────────────────────────────────────────┘
  -->
<div data-v-37601c9c="" class="card card--default">
  <!-- Icon -->
  <div data-v-37601c9c="" class="card__icon">🔧</div><!-- Title -->
  <h3 data-v-37601c9c="" class="card__title">Title</h3><!-- Description -->
  <!--v-if-->
  <!-- Slot pour contenu custom -->
  <div data-v-37601c9c="" class="card__body">Extra content</div>
</div>"
`;
